gitops/espresso/infrastructure/controllers/k8s-gateway/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: k8s-gateway
  labels:
    pod-security.kubernetes.io/enforce: baseline
