gitops/espresso/infrastructure/controllers/k8s-gateway/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: k8s-gateway
  namespace: k8s-gateway
spec:
  endpointSelector: {}
  ingress:
    # Kubelet probes
    - fromEntities:
        - host
        - remote-node
    # DNS queries from all cluster pods and LAN clients
    - fromEntities:
        - cluster
    - fromCIDR:
        - 10.0.186.0/24
        - fd7a:115c:a1e0:186::/64
        - 10.0.187.0/24
        - fd7a:115c:a1e0:187::/64
        - 100.102.0.0/16
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
          rules:
            dns:
              - matchPattern: "*"
    # Kubernetes API for watching HTTPRoutes and Services
    - toEntities:
        - kube-apiserver
